syntax = "proto3";

package chat_ws_gateway.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ChatService {
    rpc PublishChat(stream PublishChatRequest) returns (stream PublishChatResponse) {}

    rpc SubscribeBulk(SubscribeBulkRequest) returns (google.protobuf.Empty) {}
}

message PublishChatRequest {
    int64 channel_id = 1;
    Chat chat        = 2;
}

message PublishChatResponse {
    int64 channel_id             = 1;
    PublishStatus publish_status = 2;
}

message Chat {
    google.protobuf.Timestamp created_at = 1;
    int64 channel_id                     = 2;
    string text                          = 3;
}

enum PublishStatus {
    UNSPECIFIED = 0;
    SUCCESS     = 1;
    FAIL        = 2;
}

message Subscribe {
    string topic     = 1;
    string client_id = 2;
}

message SubscribeBulkRequest {
    repeated Subscribe subscribes = 1;
}