syntax = "proto3";

package socialmedia_api.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service GatewayHookService {
    rpc OnClientConnected(OnClientConnectedRequest) returns (google.protobuf.Empty) {}

    rpc OnClientDisconnected(OnClientDisconnectedRequest) returns (google.protobuf.Empty) {}

    rpc OnChatPublish(OnChatPublishRequest) returns (google.protobuf.Empty) {}

    rpc OnChatDelivered(OnChatDeliveredRequest) returns (google.protobuf.Empty) {}

    rpc OnChatAcked(OnChatAckedRequest) returns (google.protobuf.Empty) {}
}

message OnClientConnectedRequest {
    ClientInfo client_info = 1;
}

message OnClientDisconnectedRequest {
    ClientInfo client_info = 1;
}

message ClientInfo {
    string node = 1;

    string client_id = 2;

    string userEmail = 3;

    string accessToken = 4;
}

message OnChatPublishRequest {
    int64 channel_id = 1;

    google.protobuf.Timestamp chat_created_at = 2;

    google.protobuf.Timestamp publish_at = 3;
}

message OnChatAckedRequest {
    int64 channel_id = 1;

    google.protobuf.Timestamp chat_created_at = 2;

    google.protobuf.Timestamp acked_at = 3;
}

message OnChatDeliveredRequest {
    int64 channel_id = 1;

    google.protobuf.Timestamp chat_created_at = 2;

    google.protobuf.Timestamp delivered_at = 3;
}

message Chat {
    google.protobuf.Timestamp created_at = 1;
    int64 channel_id                     = 2;
    string text                          = 3;
}
